--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 </head>
 
 <body>
+    <script>
+        alert("Вам есть 18?");
+        document.write("Привет, бомж когда купиш себе норм крита");
+        console.log("я теперь в говне")
+    </script>
     <section id="main">
         <header id="header">
             <div class="wrapper">
